--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="./client/public/Bootstrap/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="./client/public/Bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="./client/public/style.css">
+    <link rel="stylesheet" href="Bootstrap/bootstrap-grid.css">
+    <link rel="stylesheet" href="Bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body style="background-image: url(/images.jpg); background-repeat: no-repeat;
     background-size: cover;">
@@ -15,7 +15,7 @@
     <div class="topbar">
         <div class="row">
             <div class="col-md-2">
-                <img class="college-logo" src="./client/assests/logo.png" height="130px" width="150px">
+                <img class="college-logo" src="./assests/logo.png" height="130px" width="150px">
             </div>
 
             <div class="col-md-10">
@@ -82,7 +82,7 @@
     <div class="row" style="margin-top: 3rem;">
         <div class="col"></div>
         <div class="col-md-8" >
-            <img src="./client/assests/bdf.png" height="100%" width="90%">
+            <img src="./assests/bdf.png" height="100%" width="90%">
         </div>
         <div class="col"></div>
     </div>
@@ -116,13 +116,13 @@
         <div class="col-md-2"></div>
         <div class="col-md-3" style="box-sizing: border-box; text-align: center;">
             <h4>ADMIN LOGIN</h4>
-            <a href="./client/admin/AdminLogin.php"><img src="./client/assests/Homeadmin.jpg"
+            <a href="./AdminLogin.php"><img src="./assests/Homeadmin.jpg"
             alt="admin"></a>
         </div>
         <div class="col-md-2" ></div>
         <div class="col-md-3" style="box-sizing: border-box; text-align: center;">
             <h4>STUDENT LOGIN</h4>
-            <a href="StudentLogin.php"><img src="./client/assests/homestudent.jpg"
+            <a href="./StudentLogin.php"><img src="./assests/homestudent.jpg"
              alt="student"></a>
         </div>
         <div class="col-md-2"></div>
@@ -133,31 +133,32 @@
     <footer style="margin-top: 4rem;">
         
         <div class="row">
-            <div class="col-4" style="text-align: center;">
+            <div class="col-xs-12 col-lg-4 col-md-6 " style="text-align: center;">
                 <h2 style="margin-top: 2rem;">Reach Us at</h2>
                 <br>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3443.6179303557906!2d77.92147671460076!3d30.333383711820982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39092a9cb1a6b575%3A0xd09388b9730a7eab!2sBuilding%20Dreams%20Foundation!5e0!3m2!1sen!2sin!4v1666690010262!5m2!1sen!2sin" height="80%" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="col-4">
+            <div class="col-xs-12 col-lg-4 col-md-6" >
                 <h2 style="margin-top: 2rem;">Follow us on</h2>
-                <ul>
-                    <li><a href="https://www.instagram.com/bdf.ngo/">Instagram</a></li>
-                    <li><a href="https://www.facebook.com/officialbuildingdreams">Facebook</a></li>
-                    <li><a href="https://twitter.com/bdf_ngo">Twitter</a></li>
-                </ul>
-                <br><br><br>
+                <div>
+                    <ul>
+                        <li><a href="https://www.instagram.com/bdf.ngo/">Instagram</a></li>
+                        <li><a href="https://www.facebook.com/officialbuildingdreams">Facebook</a></li>
+                        <li><a href="https://twitter.com/bdf_ngo">Twitter</a></li>
+                    </ul>
+                </div>
                 <h2>Write to us at</h2><br>
                 <p class="lead">school@bdf.ngo</p>
                 <p class="lead">Contact@BuildingDreams.org.in</p>
             </div>
-            <div class="col-4">
+            <div class="col-xs-12 col-lg-4 col-md-6 middle">
                 <h2 style="margin-top: 2rem;">CONTACT DETAILS</h2>
                 <br>
-                <img src="./client/assests/pngkey.com-phone-icon-png-transparent-829552.png" height="8%"width="6%" >
+                <img src="./assests/pngkey.com-phone-icon-png-transparent-829552.png" height="8%"width="6%" >
                 <br><br>
                 <p class="lead">+91 7078386765, +91 9720592667</p>
                 <br>
-                <img src="./client/assests/whatsapp-64.png" height="8%" width="6%">
+                <img src="./assests/whatsapp-64.png" height="8%" width="6%">
                 <br><br>
                 <p class="lead">+91 9720592667</p>
             </div>
